sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	var inverse=0
	do{
		for(i<-0 to getNombreValeurs()-2){
			if(!(plusPetit(i,i+1))){
				echange(i,i+1)
				inverse = 1
			}
			else{
				invers = 0
			}
		}
		
	}while (inverse == 1)
}
